--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,12 @@ body {
 	max-width: 300px;
 }
 
-a:visited 
-{
-    text-decoration: none; 
-    decoration: none; 
+a {
+    text-decoration: none;
+}
+a:link, a:visited {
+    color: blue;
+}
+a:hover {
+    color: red;
 }
