--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url(/img/back.gif); 
+    background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url(/website-1/img/back.gif); 
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
