--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,15 @@ body {
     margin-right: 2%;
 
 }
+
+/*
+.affix { 
+    top: 0;
+    width: 100%;
+    z-index: 9999 !important;
+}
+
+.affix + .container-fluid { 
+    padding-top: 70px;
+}
+*/
